--- a/about.css
+++ b/about.css
@@ -1,229 +1,222 @@
-.blue-light {
-    color: #61DFEC;
+@font-face {
+    font-family: GoogleSans;
+    src: url(font/GoogleSans-Regular.ttf);
 }
 
-.blue-dark {
-    color: #27C7FE;
+@font-face {
+    font-family: Roboto;
+    src: url(font/Roboto-400.ttf);
+}
+
+:root {
+    --blue-light-color: #61DFEC;
+    --bg-color: #27C7FE;
+    --description-color: #6C6C6C;
+    --box-shadow-color: #d1ecf5;
+    --third-color: #FFFFFF;
+}
+
+.about {
+    height: 90vh;
+    display: flex;
+    align-items: center;
+}
+
+.about__left {
+    width: 70%;
+    height: 90%;
+    margin-left: 3%;
+}
+
+.about__right {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    height: 60%;
+    margin: 3%;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+    vertical-align: middle;
 }
 
 .about__title {
-    position: absolute;
-    width: 65%;
-    height: 115px;
-    left: 6%;
-    top: 25%;
-    font-family: 'Google Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 5.2em;
-    line-height: 70px;
-    color: #61DFEC;
+    height: 30%;
+    font-family: GoogleSans;
+    font-size: 5rem;
+    color: var(--blue-light-color);
+    font-weight: 900;
+    line-height: 5.5rem;
 }
 
 .about__description {
-    position: absolute;
-    width: 34%;
-    height: 124px;
-    left: 6%;
-    top: 52%;
-    /* top: 375px; */
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 2em;
-    line-height: 30px;
-    color: #6C6C6C;
+    width: 75%;
+    margin-top: 5%;
+    font-family: Roboto;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    text-align: justify;
+    color: var(--description-color);
 }
 
 .about__button {
-    position: absolute;
-    width: 133px;
+    margin-top: 5%;
+    width: 135px;
     height: 46px;
-    left: 6%;
-    top: 80%;
-    background: #27C7FE;
+    border: 1px solid var(--box-shadow-color);
     border-radius: 100px;
-    border-style: hidden;
-    color: #FFFFFF;
-    font-size: 1.25em;
-    font-style: normal;
+    background-color: var(--bg-color);
+    font-size: 1.25rem;
     font-weight: 700;
-    line-height: 25px;
+    color: var(--third-color);
+    box-shadow: 2px 3px var(--box-shadow-color);
 }
 
-.about__image1 {
-    position: absolute;
-    width: 353.36px;
-    height: 100px;
-    right: 10%;
-    top: 35%;
-}
-
-.about__image2 {
-    position: absolute;
-    width: 400px;
-    height: 100px;
-    right: 8%;
-    bottom: 27%;
-}
-
-.about__button {
+.about__left form input:hover {
     cursor: pointer;
+    transition: 0.2s;
+    background-color: var(--blue-light-color);
+    border-color: var(--bg-dark-color);
+    transform: scale(1.095);
 }
 
-@media (max-width: 1260px) {
-    .about__description {
-        font-size: 1.9em;
+.about__image {
+    height: 30%;
+    object-fit: cover;
+}
+
+@media (max-width: 1038px) {
+    .about__title {
+        height: 25%;
+        font-size: 4rem;
     }
+
+    .about__description {
+        font-size: 1.5rem;
+    }
+
+    .about__image {
+        height: 25%;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 848px) {
+    .about__title {
+        height: 25%;
+        font-size: 3.5rem;
+    }
+
+    .about__description {
+        font-size: 1.5rem;
+    }
+
+    .about__image {
+        height: 20%;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 714px) {
+    .about__title {
+        height: 17%;
+        font-size: 3rem;
+        line-height: 3.5rem;
+    }
+
+    .about__description {
+        font-size: 1rem;
+    }
+
+    .about__right {
+        height: 50%;
+    }
+}
+
+@media (max-width: 609px) {
+    .about__title {
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+
+    .about__description {
+        line-height: 2rem;
+    }
+
+    .about__right {
+        height: 40%;
+    }
+
     .about__button {
-        top: 83%;
-    }
-    .about__image1 {
-        right: 5%;
-    }
-    .about__image2 {
-        right: 3%;
+        width: 110px;
+        height: 35px;
+        font-size: 1rem;
     }
 }
 
-@media (max-width: 1140px) {
+.isPlay_t {
+    animation-name: fade_t;
+    animation-duration: 1s;
+    transition: 1s ease;
+}
+
+.isPlay_l {
+    animation-name: fade_l;
+    animation-duration: 0.9s;
+    transition: 0.9s ease;
+}
+
+.isPlay_r {
+    animation-name: fade_r;
+    animation-duration: 0.9s;
+    transition: 0.9s ease;
+}
+
+@keyframes fade_t{
+    0% {transform: translateY(-90px); opacity: 0.2;}
+    100% {transform: translateY(0px); opacity: 1;}
+}
+
+@keyframes fade_l {
+    0% {transform: translateX(-90px); opacity: 0.2;}
+    100% {transform: translateX(0px); opacity: 1;}
+}
+
+@keyframes fade_r {
+    0% {transform: translateX(90px); opacity: 0;}
+    100% {transform: translateX(0px); opacity: 1;}
+}
+
+@media (max-width: 505px) {
     .about__title {
-        font-size: 4.5em;
+        font-size: 2rem;
     }
 }
 
-@media (max-width: 1213px) {
-    .about__description {
-        font-size: 1.75em;
-    }
-}
-
-@media (max-width: 1063px) {
+@media (max-width: 444px) {
     .about__title {
-        font-size: 4em;
+        height: 15%;
+        font-size: 1.5rem;
+        line-height: 2.5rem;
     }
+
     .about__description {
-        top: 50%;
-        font-size: 1.5em;
+        line-height: 1.5rem;
+    }
+
+    .about__right {
+        height: 35%;
     }
 }
 
-@media (max-width: 968px) {
+@media (max-width: 348px)  {
     .about__title {
-        font-size: 3.3em;
+        height: 20%;
+        font-size: 1.5rem;
+        line-height: 2rem;
     }
-    .about__description {
-        font-size: 1.2em;
-    }
-    .about__button {
-        width: 125px;
-        height: 40px;
-        top: 77%;
-    }
-}
 
-@media (max-width: 825px) {
-    .about__title {
-        font-size: 3em;
-    }
     .about__description {
-        font-size: 1em;
-    }
-    .about__image1 {
-        width: 300px;
-        height: 80px;
-        top: 40%;
-    }
-    .about__image2 {
-        width: 315px;
-        height: 80px;
-        top: 60%;
-    }
-}
-
-@media (max-width: 636px) {
-    .about__title {
-        width: 40%;
-        font-size: 2em;
-        line-height: 40px;;
-    }
-    .about__description {
-        top: 43%;
-    }
-    .about__image1 {
-        width: 250px;
-        height: 70px;
-    }
-    .about__image2 {
-        width: 270px;
-        height: 70px;
-    }
-}
-
-@media (max-width: 529px) {
-    .about__description {
-        top: 47%;
-        font-size: 0.5;
-        line-height: 20px;
-    }
-    .about__button {
-        width: 20%;
-        height: 5%;
-        font-size: 0.75em;
-    }
-    .about__image1 {
-        top: 45%;
-        width: 40%;
-        height: 8%;
-    }
-    .about__image2 {
-        width: 43%;
-        height: 8%;
-    }
-}
-@media (max-width: 389px) {
-    .about__title {
-        top: 15%;
-    }
-    .about__description {
-        top: 37%;
-        width: 65%;
-    }
-    .about__button {
-        top: 62%;
-        width: 30%;
-        height: 6%;
-        font-size: 0.75em;
-    }
-    .about__image1 {
-        top: 75%;
-        width: 80%;
-        height: 10%;
-        right: 10%;
-    }
-    .about__image2 {
-        top: 89%;
-        width: 85%;
-        height: 10%;
-        right: 8%;
-    }
-}
-
-@media (max-width: 261px) {
-    .about__button {
-        top: 70%;
-        width: 27%;
-        height: 4%;
-        font-size: 0.5em;
-    }
-    .about__image1 {
-        top: 80%;
-        width: 75%;
-        height: 7%;
-    }
-    .about__image2 {
-        top: 90%;
-        width: 80%;
-        height: 7%;
+        line-height: 1rem;
     }
 }
