--- a/product.css
+++ b/product.css
@@ -1,193 +1,204 @@
-html {
-    background-color: #27C7FE;
+@font-face {
+    font-family: GoogleSans;
+    src: url(font/GoogleSans-Regular.ttf);
 }
 
-.product__content {
+:root {
+    --main-color: #14497D;
+    --bg-color: #27C7FE;
+    --bg-dark-color: #1391bb;
+    --third-color: #FFFFFF;
+    --secondary-color: #B0EBFF;
+    --highlight-color: rgb(235, 125, 125);
+}
+
+.product__header {
+    margin-left: 10px;
+}
+
+.product__title {
+    margin-top: 100px;
+    font-family: GoogleSans;
+    font-size: 5rem;
+    color: var(--main-color);
+    margin-bottom: auto;
+}
+
+.product__title::after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    top: 45px;
+    z-index: -1;
+    width: 70%;
+    height: 50px;
+    background-color: var(--secondary-color);
+    border-radius: 5px 100px 100px 5px;
+}
+
+.product__options {
+    margin-left: 10px;
+    width: 40%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
-.product__title h2 {
-    position: absolute;
-    left: 6%;
-    top: 12%;
-    font-family: 'Google Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 5em;
-    line-height: 95px;
-    color: #14497D;
-    z-index: 1;
-}
-
-.product__title--description {
-    position: absolute;
-    width: 100%;
-    height: 8%;
-    left: -17%;
-    top: 29%;
-    background: #B0EBFF;
-    border-radius: 100px;
-    align-items: center;
-}
-
-.product__title--description form {
-    position: absolute;
-    width: 125px;
-    height: 65%;
-    right: 15px;
-    top: 10px;
-    background: #14497D;
-    border-radius: 20px;
-    border: none;
-    color: #FFFFFF;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
+.product__option {
+    width: 18%;
+    height: 32px;
 }
 
 .product__button--value {
-    font-size: 1em;
-    margin-left: 10px;
-    background-color: #14497D;
-    border: none;
-    color: #FFFFFF;
-}
-
-.product__button--icon {
-    font-size: large;
-    color: #FFFFFF;
-    padding-top: 7px;
-    padding-right: 3px;
-}
-
-.product__content--box1, .product__content--box2, .product__content--box3{
-    position: absolute;
-    width: 30%;
-    height: 42%;
-    top: 350px;
-    font-family: 'Google Sans';
-    background: #FFFFFF;
-    border-radius: 10px;
-}
-
-.product__content--box1 {
-    left: 2%;
-}
-
-.product__box--thumbnail {
-    position: absolute;
-    width: 90%;
-    height: 15%;
-    left: 5%;
-    top: 10%;
-    font-size: 20px;
-    font-weight: 700;
-    background-color: #D9D9D9;
-    text-align: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    width: 100%;
+    height: 100%;
+    color: var(--main-color);
+    background-color: var(--third-color);
     border-radius: 5px;
+    border-color: var(--bg-dark-color);
+    transition: 0.2s;
+    font-family: GoogleSans;
+    font-size: medium;
 }
 
-.product__box--video-title {
-    position: absolute;
-    width: 90%;
-    height: 15%;
-    left: 5%;
-    top: 70%;
-    font-size: 20px;
-    font-weight: 700;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.product__content--box3 {
-    right: 2%;
-}
-
-.product form, input:hover {
+.product__options form input:hover {
     cursor: pointer;
+    background-color: var(--secondary-color);
+    border-color: var(--bg-dark-color);
+    transform: scale(1.095);
 }
 
+.product__options form input:active {
+    color: var(--third-color);
+    background-color: var(--main-color);
+}
 
-@media (max-width: 587px) {
-    .product__title h2 {
-        position: absolute;
-        left: 1.5%;
-        font-size: 4em;
-        top: 2%;
-    }
-    .product__title--description {
-        top: 17%;
+.product__list-videos {
+    max-width: 90%;
+    display: flex;
+    justify-content: space-around;
+    height: 450px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 2rem;
+}
+.product__container--video .product__video--img {
+    width: 95%;
+    height: 200px;
+}
+
+.product__container--video .product__video--img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product__container--video .product__video--img img:hover {
+    transform: translateY(-10px);
+    transition: 0.2s all linear;
+}
+
+.product__container--video a {
+    display: block;
+    margin-top: 1rem;
+    font-family: GoogleSans;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.product__container--video a:hover {
+    color: var(--highlight-color);
+}
+
+.product__container--video span {
+    font-size: 0.95rem;
+    opacity: 0.7;
+}
+
+.swiper-pagination-bullet {
+    width: 6px !important;
+    height: 6px !important;
+    border-radius: 0.2rem !important;
+    background: var(--main-color) !important;
+    opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active {
+    width: 1.5rem !important;
+    background: var(--secondary-color) !important;
+}
+
+.isPlay_t {
+    animation-name: fade_t;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    transition: 0.9s ease;
+}
+
+.isPlay_l {
+    animation-name: fade_l;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    position: relative;
+    transition: 0.9s ease;
+}
+
+@keyframes fade_t{
+    0% {transform: translateY(-90px); opacity: 0;}
+    100% {transform: translateY(0); opacity: 1;}
+}
+
+@keyframes fade_l {
+    0% {transform: translateX(-90px); opacity: 0.2;}
+    100% {transform: translateX(0px); opacity: 1;}
+}
+
+@media (max-width: 960px) {
+    .product__option {
+        padding-left: 2px;
+        padding-right: 2px;
+        width: 69px;
     }
 }
 
-@media (max-width: 580px) {
-    html {
-        overflow-y: scroll;
+@media (max-width: 719px) {
+    .product__options {
+        width: 60%;
     }
-    .product__content--box1, .product__content--box2, .product__content--box3 {
-        width: 305px;
-        margin: 0 auto;
-        left: 0;
-        right: 0;
-    }
-    .product__content--box1 {
-        top: 30%;
-    }
-    .product__content--box2 {
-        top: 77%;
-    }
-    .product__content--box3 {
-        top: 125%;
-    }
-    .product__title h2 {
-        font-size: 3.5em;
-    }
-    .product__title--description {
-        top: 16%;
-    }
-    .product__title--description form {
-        width: 100px;
-    }
-    .product__button--value {
-        font-size: 0.8em;
-        margin-left: 10px;
-    }
-    .product__button--icon {
-        font-size: medium;
-        color: #FFFFFF;
-        padding-top: 7px;
-        padding-right: 3px;
+    .product__option {
     }
 }
 
-@media (max-width: 410px) {
-    .product__title--description form{
-        top: 48%;
+@media (max-width: 388px) {
+    .product__title {
+        font-size: 4rem;
     }
-    .product__title--description form {
-        width: 80px;
-        height: 25px;
-        margin-right: 30px;
+
+    .product__title--after {
+        width: 250px;
+        margin-top: -40px;
     }
-    .product__button--value {
-        font-size: 0.6em;
-        margin-left: 6px;
+
+    .product__container--video .product__video--img {
+        width: 150px;
     }
-    .product__button--icon {
-        font-size: small;
-        color: #FFFFFF;
-        padding-top: 5px;
-        padding-right: 5px;
+}
+
+@media (max-width: 333px) {
+    .product__list-videos {
+        max-width: 100%;
     }
-    .product__title--description {
-        width: 410px;
-        left: -150px;
+
+    .product__container--video .product__video--img {
+        width: 140px;
     }
-    .product__content--box1, .product__content--box2, .product__content--box3 {
-        width: 270px;
+    .product__header, .product__options {
+        margin-left: 1px;
+    }
+}
+
+@media (max-width: 280px) {
+    .product__container--video .product__video--img {
+        width: 132px;
     }
 }
