--- a/product.css
+++ b/product.css
@@ -74,22 +74,21 @@
 }
 
 .product__list-videos {
-    max-width: 90%;
+    max-width: 98%;
     display: flex;
     justify-content: space-around;
-    height: 450px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 2rem;
 }
 .product__container--video .product__video--img {
-    width: 95%;
+    width: 100%;
     height: 200px;
 }
 
 .product__container--video .product__video--img img {
     width: 100%;
-    height: 100%;
+    height: 270px;
     object-fit: cover;
 }
 
@@ -100,7 +99,7 @@
 
 .product__container--video a {
     display: block;
-    margin-top: 1rem;
+    margin-top: 5rem;
     font-family: GoogleSans;
     font-size: 1rem;
     font-weight: 500;
@@ -155,8 +154,6 @@
 
 @media (max-width: 960px) {
     .product__option {
-        padding-left: 2px;
-        padding-right: 2px;
         width: 69px;
     }
 }
@@ -166,10 +163,18 @@
         width: 60%;
     }
     .product__option {
+        width: 50px;
+    }
+    .product__button--value {
+        font-size: 0.6rem;
+        font-weight: 500;
     }
 }
 
-@media (max-width: 388px) {
+@media (max-width: 451px) {
+    .product__options {
+        width: 80%;
+    }
     .product__title {
         font-size: 4rem;
     }
@@ -180,24 +185,34 @@
     }
 
     .product__container--video .product__video--img {
-        width: 150px;
+        width: 200px;
+        height: 180px;
+    }
+    .product__container--video a {
+        margin-top: 6rem;
     }
 }
 
-@media (max-width: 333px) {
-    .product__list-videos {
-        max-width: 100%;
+@media (max-width: 410px) {
+    .product__container--video .product__video--img {
+        width: 160px;
+        height: 190px;
+    }
+    .product__container--video .product__video--img img {
+        width: 100%;
+        height: 190px;
+    }
+    
+    .product__container--video a {
+        margin-top: 1rem;
     }
 
-    .product__container--video .product__video--img {
-        width: 140px;
-    }
     .product__header, .product__options {
         margin-left: 1px;
     }
 }
 
-@media (max-width: 280px) {
+@media (max-width: 353px) {
     .product__container--video .product__video--img {
         width: 132px;
     }
