--- a/Code/Contact/contact.css
+++ b/Code/Contact/contact.css
@@ -33,11 +33,15 @@
 .contact__avatar--container {
     width: 50%;
 }
+
+.contact__avatar--container img {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 .contact__box--avatar, .contact__box--avatar2 {
     width: 100%;
     height: 290px;
     vertical-align: middle;
-    border: 2px solid #14497D;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -78,6 +82,12 @@
     padding-top: 12px;
     padding-bottom: 12px;
     object-fit: cover;
+}
+
+.contact__content--box:hover {
+    cursor: pointer;
+    transform: scale(1.095);
+    transition: 0.5s;
 }
 
 .isPlay_t {
