--- a/Code/MainPage/main.css
+++ b/Code/MainPage/main.css
@@ -52,8 +52,8 @@ header .menu a{
 }
 
 header .menu a:hover{
-    color: #fff;
     background-color: #61DFEC;
+    color: #fff;
 }
 
 header .btn {
@@ -77,7 +77,7 @@ header .btn .fa-xmark {
 
     header .menu {
         position: fixed;
-        background-color: #61DFEC;
+        background-color: #FFFFFF;
         flex-direction: column;
         min-width: 400px;
         height: 100vh;
@@ -224,6 +224,11 @@ iframe {
     font-size: 2rem;
 }
 
+.foot__chanel i:hover {
+    transform: scale(1.3);
+    transition: 0.5s;
+}
+
 .foot__list1 {
     display: flex;
     justify-content: center;
@@ -235,13 +240,15 @@ iframe {
     background-color: var(--fourth-color);
     border-radius: 5px;
     padding: 5px 0;
-    border: 1px solid var(--bg-dark-color);
+    border: none;
     margin: 40px 10px 30px 10px;
     color: var(--third-color);
+    box-sizing: 0 1px var(--bg-dark-color);
 }
 
 .foot__list1 form input:hover {
     cursor: pointer;
+    opacity: 0.8;
 }
 .foot__list2 {
     display: inline-block;
@@ -251,6 +258,11 @@ iframe {
     padding: 20px;
     color: var(--third-color);
     font-size: 1em;
+}
+
+.foot__list2 a:hover {
+    text-decoration: underline;
+    transition: 0.8;
 }
 
 .foot__logo {
