--- a/Code/Product/product.css
+++ b/Code/Product/product.css
@@ -104,10 +104,13 @@
     font-size: 1rem;
     font-weight: 500;
     text-decoration: none;
+    color: var(--main-color);
+    transition: 0.5s;
+    transition-property: color;
 }
 
 .product__container--video a:hover {
-    color: var(--highlight-color);
+    color: var(--bg-color);
 }
 
 .product__container--video span {
