--- a/Code/Footer/footer.css
+++ b/Code/Footer/footer.css
@@ -37,11 +37,6 @@
     font-size: 2rem;
 }
 
-.foot__chanel i:hover {
-    transform: scale(1.3);
-    transition: 0.5s;
-}
-
 .foot__list1 {
     display: flex;
     justify-content: center;
@@ -53,17 +48,14 @@
     background-color: var(--fourth-color);
     border-radius: 5px;
     padding: 5px 0;
-    border: none;
+    border: 1px solid var(--bg-dark-color);
     margin: 40px 10px 30px 10px;
     color: var(--third-color);
-    box-shadow: 0 1px var(--bg-dark-color);
 }
 
 .foot__list1 form input:hover {
     cursor: pointer;
-    opacity: .8;
 }
-
 .foot__list2 {
     display: inline-block;
 }
@@ -74,11 +66,6 @@
     font-size: 1em;
 }
 
-.foot__list2 a:hover {
-    text-decoration: underline;
-    transition: .8s;
-}
-
 .foot__logo {
     display: flex;
     justify-content: center;
@@ -86,6 +73,7 @@
 }
 .foot__logo figure {
     display: table-cell;
+    /* width: calc(100%-7em); */
     margin: 5px 5px 5px 30px;
 }
 
