--- a/Code/MainPage/main.css
+++ b/Code/MainPage/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: GoogleSans;
-    src: url(./Font/GoogleSans-Regular.ttf);
+    src: url(/Font/GoogleSans-Regular.ttf);
 }
 
 *{
